force-app/main/default/objects/Contact/fields/AccountType_del__c.field-meta.xml
<CustomField>
    <fullName>AccountType_del__c</fullName>
    <formula>TEXT( Account.dx_kokyakusyubetsu__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>顧客種別</label>
    <type>Text</type>
</CustomField>