force-app/main/default/objects/Contact/fields/BAN_merumagaformryuunyuu__c.field-meta.xml
<CustomField>
    <fullName>BAN_merumagaformryuunyuu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BANメルマガフォーム流入</label>
    <type>Checkbox</type>
</CustomField>