force-app/main/default/objects/Contact/fields/BIM11__c.field-meta.xml
<CustomField>
    <fullName>BIM11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BIMが進まない状況を打破！するための戦略資料</label>
    <type>Checkbox</type>
</CustomField>