force-app/main/default/objects/Contact/fields/BIM3__c.field-meta.xml
<CustomField>
    <fullName>BIM3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BIMを活用できる人材が少ない、またはいない</label>
    <type>Checkbox</type>
</CustomField>