force-app/main/default/objects/Contact/fields/BIM4__c.field-meta.xml
<CustomField>
    <fullName>BIM4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BIMの活用に向けた、採用・育成・教育精度がない</label>
    <type>Checkbox</type>
</CustomField>