force-app/main/default/objects/Contact/fields/BIM_DX__c.field-meta.xml
<CustomField>
    <fullName>BIM_DX__c</fullName>
    <label>あなたは、社内でBIM・DXを活用または推進する役割ですか</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>