force-app/main/default/objects/Contact/fields/BuildApp_check_domomovie_ryunyuu__c.field-meta.xml
<CustomField>
    <fullName>BuildApp_check_domomovie_ryunyuu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuildAppデモムービー請求フォーム流入</label>
    <type>Checkbox</type>
</CustomField>