force-app/main/default/objects/Contact/fields/BuildApp_Sales_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>BuildApp_Sales_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuildApp営業_メール送信除外指定</label>
    <type>Checkbox</type>
</CustomField>