force-app/main/default/objects/Contact/fields/BuildApp_Sales_Email_Opt_Out_Reason__c.field-meta.xml
<CustomField>
    <fullName>BuildApp_Sales_Email_Opt_Out_Reason__c</fullName>
    <label>BuildApp営業_メール送信除外指定理由</label>
    <length>255</length>
    <type>Text</type>
</CustomField>