force-app/main/default/objects/Contact/fields/buildAppMailOverview__c.field-meta.xml
<CustomField>
    <fullName>buildAppMailOverview__c</fullName>
    <label>BuildAppメール配信内容</label>
    <type>TextArea</type>
</CustomField>