force-app/main/default/objects/Contact/fields/CE_ManagementTarget__c.field-meta.xml
<CustomField>
    <fullName>CE_ManagementTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>管理対象_CE</label>
    <type>Checkbox</type>
</CustomField>