force-app/main/default/objects/Contact/fields/CE_source__c.field-meta.xml
<CustomField>
    <fullName>CE_source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>セメント</label>
    <type>Checkbox</type>
</CustomField>