force-app/main/default/objects/Contact/fields/contactChk__c.field-meta.xml
<CustomField>
    <fullName>contactChk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>接触</label>
    <type>Checkbox</type>
</CustomField>