force-app/main/default/objects/Contact/fields/contactChkNum__c.field-meta.xml
<CustomField>
    <fullName>contactChkNum__c</fullName>
    <formula>IF(contactChk__c,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>接触</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>