force-app/main/default/objects/Contact/fields/counterClickInEmail_recognition__c.field-meta.xml
<CustomField>
    <fullName>counterClickInEmail_recognition__c</fullName>
    <label>メール内コンテンツクリック回数_認知</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>