force-app/main/default/objects/Contact/fields/counterOpenInEmail_enlightenment__c.field-meta.xml
<CustomField>
    <fullName>counterOpenInEmail_enlightenment__c</fullName>
    <label>メール開封回数_啓蒙</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>