force-app/main/default/objects/Contact/fields/counterOpenInEmail_recognition__c.field-meta.xml
<CustomField>
    <fullName>counterOpenInEmail_recognition__c</fullName>
    <label>メール開封回数_認知</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>