force-app/main/default/objects/Contact/fields/CS_Case__c.field-meta.xml
<CustomField>
    <fullName>CS_Case__c</fullName>
    <label>担当案件</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>スポーツブランド</fullName>
            </value>
            <value>
                <fullName>商業施設</fullName>
            </value>
            <value>
                <fullName>医薬企業</fullName>
            </value>
            <value>
                <fullName>多店舗化粧品</fullName>
            </value>
            <value>
                <fullName>ホテル</fullName>
            </value>
            <value>
                <fullName>オフィス物流</fullName>
            </value>
            <value>
                <fullName>建築全般</fullName>
            </value>
            <value>
                <fullName>海外ブランド</fullName>
            </value>
            <value>
                <fullName>星野R企業</fullName>
            </value>
            <value>
                <fullName>ユニクロBIM</fullName>
            </value>
            <value>
                <fullName>レジデンス</fullName>
            </value>
            <value>
                <fullName>オフィス</fullName>
            </value>
            <value>
                <fullName>多店舗展開</fullName>
            </value>
            <value>
                <fullName>実施設計</fullName>
            </value>
            <value>
                <fullName>大手企業</fullName>
            </value>
            <value>
                <fullName>企業</fullName>
            </value>
            <value>
                <fullName>公共</fullName>
            </value>
            <value>
                <fullName>星野リゾート</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>