force-app/main/default/objects/Contact/fields/CS_Category__c.field-meta.xml
<CustomField>
    <fullName>CS_Category__c</fullName>
    <label>ターゲットカテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>➀</fullName>
            </value>
            <value>
                <fullName>➁</fullName>
            </value>
            <value>
                <fullName>③</fullName>
            </value>
            <value>
                <fullName>BIMデザインチーム</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>