force-app/main/default/objects/Contact/fields/CS_connectkeyman__c.field-meta.xml
<CustomField>
    <fullName>CS_connectkeyman__c</fullName>
    <defaultValue>false</defaultValue>
    <label>数珠繋ぎキーマン</label>
    <type>Checkbox</type>
</CustomField>