force-app/main/default/objects/Contact/fields/CS_LastMonthAction__c.field-meta.xml
<CustomField>
    <fullName>CS_LastMonthAction__c</fullName>
    <label>先月のアクション</label>
    <type>TextArea</type>
</CustomField>