force-app/main/default/objects/Contact/fields/CS_LastMonthProspect__c.field-meta.xml
<CustomField>
    <fullName>CS_LastMonthProspect__c</fullName>
    <label>先月見込み</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CS_Prospect</valueSetName>
    </valueSet>
</CustomField>