force-app/main/default/objects/Contact/fields/CS_MailTarget__c.field-meta.xml
<CustomField>
    <fullName>CS_MailTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSメール配信対象者</label>
    <type>Checkbox</type>
</CustomField>