force-app/main/default/objects/Contact/fields/CS_NumberOfInterview_goal__c.field-meta.xml
<CustomField>
    <fullName>CS_NumberOfInterview_goal__c</fullName>
    <label>有効面談件数_目標</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>