force-app/main/default/objects/Contact/fields/CS_RBD_LastUpdDate__c.field-meta.xml
<CustomField>
    <fullName>CS_RBD_LastUpdDate__c</fullName>
    <label>関係構築度_最終更新日</label>
    <type>Date</type>
</CustomField>