force-app/main/default/objects/Contact/fields/CS_StrategyPriority__c.field-meta.xml
<CustomField>
    <fullName>CS_StrategyPriority__c</fullName>
    <label>攻略優先度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>