force-app/main/default/objects/Contact/fields/CS_Target__c.field-meta.xml
<CustomField>
    <fullName>CS_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSフォロー対象</label>
    <type>Checkbox</type>
</CustomField>