force-app/main/default/objects/Contact/fields/CS_TargetCategory__c.field-meta.xml
<CustomField>
    <fullName>CS_TargetCategory__c</fullName>
    <description>1.Lv5/6 定期的に案件もらえる
2.建材選定依頼未利用
3.定着化していない</description>
    <label>ターゲット種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>