force-app/main/default/objects/Contact/fields/CS_ThisMonthAction__c.field-meta.xml
<CustomField>
    <fullName>CS_ThisMonthAction__c</fullName>
    <label>今月のアクション</label>
    <type>TextArea</type>
</CustomField>