force-app/main/default/objects/Contact/fields/cs_toukaikeinendokakutokupt__c.field-meta.xml
<CustomField>
    <fullName>cs_toukaikeinendokakutokupt__c</fullName>
    <formula>IF( YEAR( cw_Lv1_hanteibi__c ) - YEAR( TODAY() ) = 0
,IF( MONTH( TODAY() ) &gt;= 7
,IF( MONTH( cw_Lv1_hanteibi__c ) &gt;= 7
,1
,0
)
,IF( MONTH( cw_Lv1_hanteibi__c ) &lt;= 6
,1
,0
)
)
,IF( YEAR( cw_Lv1_hanteibi__c ) - YEAR( TODAY() ) = 1
,IF( MONTH( TODAY() ) &gt;= 7
,IF( MONTH( cw_Lv1_hanteibi__c ) &lt;= 6
,1
,0
)
,0
)
,IF( YEAR( cw_Lv1_hanteibi__c ) - YEAR( TODAY() ) = -1
,IF( MONTH( TODAY() ) &lt;= 6
,IF( MONTH( cw_Lv1_hanteibi__c ) &gt;= 7
,1
,0
)
,0
)
,0
)
)
)
+
IF( YEAR( cw_Lv2_hanteibi__c ) - YEAR( TODAY() ) = 0
,IF( MONTH( TODAY() ) &gt;= 7
,IF( MONTH( cw_Lv2_hanteibi__c ) &gt;= 7
,1
,0
)
,IF( MONTH( cw_Lv2_hanteibi__c ) &lt;= 6
,1
,0
)
)
,IF( YEAR( cw_Lv2_hanteibi__c ) - YEAR( TODAY() ) = 1
,IF( MONTH( TODAY() ) &gt;= 7
,IF( MONTH( cw_Lv2_hanteibi__c ) &lt;= 6
,1
,0
)
,0
)
,IF( YEAR( cw_Lv2_hanteibi__c ) - YEAR( TODAY() ) = -1
,IF( MONTH( TODAY() ) &lt;= 6
,IF( MONTH( cw_Lv2_hanteibi__c ) &gt;= 7
,1
,0
)
,0
)
,0
)
)
)
+
IF( YEAR( cw_Lv3_hanteibi__c ) - YEAR( TODAY() ) = 0
,IF( MONTH( TODAY() ) &gt;= 7
,IF( MONTH( cw_Lv3_hanteibi__c ) &gt;= 7
,1
,0
)
,IF( MONTH( cw_Lv3_hanteibi__c ) &lt;= 6
,1
,0
)
)
,IF( YEAR( cw_Lv3_hanteibi__c ) - YEAR( TODAY() ) = 1
,IF( MONTH( TODAY() ) &gt;= 7
,IF( MONTH( cw_Lv3_hanteibi__c ) &lt;= 6
,1
,0
)
,0
)
,IF( YEAR( cw_Lv3_hanteibi__c ) - YEAR( TODAY() ) = -1
,IF( MONTH( TODAY() ) &lt;= 6
,IF( MONTH( cw_Lv3_hanteibi__c ) &gt;= 7
,1
,0
)
,0
)
,0
)
)
)
+
IF( YEAR( cw_Lv4_hanteibi__c ) - YEAR( TODAY() ) = 0
,IF( MONTH( TODAY() ) &gt;= 7
,IF( MONTH( cw_Lv4_hanteibi__c ) &gt;= 7
,1
,0
)
,IF( MONTH( cw_Lv4_hanteibi__c ) &lt;= 6
,1
,0
)
)
,IF( YEAR( cw_Lv4_hanteibi__c ) - YEAR( TODAY() ) = 1
,IF( MONTH( TODAY() ) &gt;= 7
,IF( MONTH( cw_Lv4_hanteibi__c ) &lt;= 6
,1
,0
)
,0
)
,IF( YEAR( cw_Lv4_hanteibi__c ) - YEAR( TODAY() ) = -1
,IF( MONTH( TODAY() ) &lt;= 6
,IF( MONTH( cw_Lv4_hanteibi__c ) &gt;= 7
,1
,0
)
,0
)
,0
)
)
)
+
IF( YEAR( cw_Lv5_hanteibi__c ) - YEAR( TODAY() ) = 0
,IF( MONTH( TODAY() ) &gt;= 7
,IF( MONTH( cw_Lv5_hanteibi__c ) &gt;= 7
,1
,0
)
,IF( MONTH( cw_Lv5_hanteibi__c ) &lt;= 6
,1
,0
)
)
,IF( YEAR( cw_Lv5_hanteibi__c ) - YEAR( TODAY() ) = 1
,IF( MONTH( TODAY() ) &gt;= 7
,IF( MONTH( cw_Lv5_hanteibi__c ) &lt;= 6
,1
,0
)
,0
)
,IF( YEAR( cw_Lv5_hanteibi__c ) - YEAR( TODAY() ) = -1
,IF( MONTH( TODAY() ) &lt;= 6
,IF( MONTH( cw_Lv5_hanteibi__c ) &gt;= 7
,1
,0
)
,0
)
,0
)
)
)
+
IF( YEAR( cw_Lv6_hanteibi__c ) - YEAR( TODAY() ) = 0
,IF( MONTH( TODAY() ) &gt;= 7
,IF( MONTH( cw_Lv6_hanteibi__c ) &gt;= 7
,1
,0
)
,IF( MONTH( cw_Lv6_hanteibi__c ) &lt;= 6
,1
,0
)
)
,IF( YEAR( cw_Lv6_hanteibi__c ) - YEAR( TODAY() ) = 1
,IF( MONTH( TODAY() ) &gt;= 7
,IF( MONTH( cw_Lv6_hanteibi__c ) &lt;= 6
,1
,0
)
,0
)
,IF( YEAR( cw_Lv6_hanteibi__c ) - YEAR( TODAY() ) = -1
,IF( MONTH( TODAY() ) &lt;= 6
,IF( MONTH( cw_Lv6_hanteibi__c ) &gt;= 7
,1
,0
)
,0
)
,0
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>当会計年度の獲得ポイント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>