force-app/main/default/objects/Contact/fields/CW_ContactExternalKey__c.field-meta.xml
<CustomField>
    <fullName>CW_ContactExternalKey__c</fullName>
    <description>CSWEB用外部取込キー</description>
    <externalId>true</externalId>
    <label>CSWEB用取り込み用（外部キー）</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>