force-app/main/default/objects/Contact/fields/CW_CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CW_CreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>個社別管理開始ユーザ_CW</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AChx88</relationshipName>
    <type>Lookup</type>
</CustomField>