force-app/main/default/objects/Contact/fields/CW_Department__c.field-meta.xml
<CustomField>
    <fullName>CW_Department__c</fullName>
    <label>担当部署_CW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>