force-app/main/default/objects/Contact/fields/CW_Details1__c.field-meta.xml
<CustomField>
    <fullName>CW_Details1__c</fullName>
    <label>詳細1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>