force-app/main/default/objects/Contact/fields/CW_Details2__c.field-meta.xml
<CustomField>
    <fullName>CW_Details2__c</fullName>
    <label>詳細2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>