force-app/main/default/objects/Contact/fields/CW_Details3__c.field-meta.xml
<CustomField>
    <fullName>CW_Details3__c</fullName>
    <label>詳細3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>