force-app/main/default/objects/Contact/fields/cw_getpoint__c.field-meta.xml
<CustomField>
    <fullName>cw_getpoint__c</fullName>
    <formula>if( isblank( cw_Lv6_hanteibi__c )
	,if( isblank( cw_Lv5_hanteibi__c )
		,if( isblank( cw_Lv4_hanteibi__c )
			,if( isblank( cw_Lv3_hanteibi__c )
				,if( isblank( cw_Lv2_hanteibi__c )
					,if( isblank( cw_Lv1_hanteibi__c )
						,0
						,1
						)
					,if( cw_Lv2_hanteibi__c = cw_Lv1_hanteibi__c
						,if( isblank( cw_Lv1_hanteibi__c )
							,0
							,2
							)
						,1
						)
					)
				,if( cw_Lv3_hanteibi__c = cw_Lv2_hanteibi__c
					,if( cw_Lv3_hanteibi__c = cw_Lv1_hanteibi__c
							,if( isblank( cw_Lv1_hanteibi__c )
							,0
							,3
							)
						,2
						)
					,1
					)
				)
			,if( cw_Lv4_hanteibi__c = cw_Lv3_hanteibi__c
				,if( cw_Lv4_hanteibi__c = cw_Lv2_hanteibi__c
					,if( cw_Lv4_hanteibi__c = cw_Lv1_hanteibi__c
						,if( isblank( cw_Lv1_hanteibi__c )
							,0
							,4
							)
						,3
						)
					,2
					)
				,1
				)
			)
		,if( cw_Lv5_hanteibi__c = cw_Lv4_hanteibi__c
			,if( cw_Lv5_hanteibi__c = cw_Lv3_hanteibi__c
				,if( cw_Lv5_hanteibi__c = cw_Lv2_hanteibi__c
					,if( cw_Lv5_hanteibi__c = cw_Lv1_hanteibi__c
						,if( isblank( cw_Lv1_hanteibi__c )
							,0
							,5
							)
						,4
						)
					,3
					)
				,2
				)
			,1
			)
		)
	,if( cw_Lv6_hanteibi__c = cw_Lv5_hanteibi__c
		,if( cw_Lv6_hanteibi__c = cw_Lv4_hanteibi__c
			,if( cw_Lv6_hanteibi__c = cw_Lv3_hanteibi__c
				,if( cw_Lv6_hanteibi__c = cw_Lv2_hanteibi__c
					,if( cw_Lv6_hanteibi__c = cw_Lv1_hanteibi__c
						,if( isblank( cw_Lv1_hanteibi__c )
							,0
							,6
							)
						,5
						)
					,4
					)
				,3
				)
			,2
			)
		,1
		)
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最新獲得ポイント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>