force-app/main/default/objects/Contact/fields/CW_LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>CW_LastActivityDate__c</fullName>
    <label>最終活動日_CW</label>
    <type>Date</type>
</CustomField>