force-app/main/default/objects/Contact/fields/cw_lastDay__c.field-meta.xml
<CustomField>
    <fullName>cw_lastDay__c</fullName>
    <formula>if( isblank( cw_Lv6_hanteibi__c )
	,if( isblank( cw_Lv5_hanteibi__c )
		,if( isblank( cw_Lv4_hanteibi__c )
			,if( isblank( cw_Lv3_hanteibi__c )
				,if( isblank( cw_Lv2_hanteibi__c )
					,cw_Lv1_hanteibi__c
					,cw_Lv2_hanteibi__c
					)
				,cw_Lv3_hanteibi__c
				)
			,cw_Lv4_hanteibi__c
			)
		,cw_Lv5_hanteibi__c
		)
	,cw_Lv6_hanteibi__c
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最新判定日</label>
    <type>Date</type>
</CustomField>