force-app/main/default/objects/Contact/fields/CW_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>CW_LastModifiedDate__c</fullName>
    <label>最終更新日_CW</label>
    <type>DateTime</type>
</CustomField>