force-app/main/default/objects/Contact/fields/cw_Lv1_hanteibi__c.field-meta.xml
<CustomField>
    <fullName>cw_Lv1_hanteibi__c</fullName>
    <label>Lv1判定日</label>
    <type>Date</type>
</CustomField>