force-app/main/default/objects/Contact/fields/cw_Lv1_point_day__c.field-meta.xml
<CustomField>
    <fullName>cw_Lv1_point_day__c</fullName>
    <label>Lv1ポイントアップ日</label>
    <type>Date</type>
</CustomField>