force-app/main/default/objects/Contact/fields/CW_Lv2_count__c.field-meta.xml
<CustomField>
    <fullName>CW_Lv2_count__c</fullName>
    <label>Lv2ポイントアップ数記録</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>