force-app/main/default/objects/Contact/fields/cw_Lv2_hanteibi__c.field-meta.xml
<CustomField>
    <fullName>cw_Lv2_hanteibi__c</fullName>
    <label>Lv2判定日</label>
    <type>Date</type>
</CustomField>