force-app/main/default/objects/Contact/fields/cw_Lv3_hanteibi__c.field-meta.xml
<CustomField>
    <fullName>cw_Lv3_hanteibi__c</fullName>
    <label>Lv3判定日</label>
    <type>Date</type>
</CustomField>