force-app/main/default/objects/Contact/fields/cw_Lv3_point_day__c.field-meta.xml
<CustomField>
    <fullName>cw_Lv3_point_day__c</fullName>
    <label>Lv3ポイントアップ日</label>
    <type>Date</type>
</CustomField>