force-app/main/default/objects/Contact/fields/CW_Lv4_count__c.field-meta.xml
<CustomField>
    <fullName>CW_Lv4_count__c</fullName>
    <label>Lv4ポイントアップ数記録</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>