force-app/main/default/objects/Contact/fields/cw_Lv4_point__c.field-meta.xml
<CustomField>
    <fullName>cw_Lv4_point__c</fullName>
    <formula>if( isblank(cw_Lv4_hanteibi__c) ,0 ,1 )</formula>
    <label>Lv4ポイント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>