force-app/main/default/objects/Contact/fields/CW_ManagementTarget__c.field-meta.xml
<CustomField>
    <fullName>CW_ManagementTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>管理対象_CW</label>
    <type>Checkbox</type>
</CustomField>