force-app/main/default/objects/Contact/fields/CW_MyDepartmentFlg__c.field-meta.xml
<CustomField>
    <fullName>CW_MyDepartmentFlg__c</fullName>
    <formula>IF( $User.Department= CW_Department__c ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*私の部署Flg_CW</label>
    <type>Checkbox</type>
</CustomField>