force-app/main/default/objects/Contact/fields/CW_PastDepartment__c.field-meta.xml
<CustomField>
    <fullName>CW_PastDepartment__c</fullName>
    <label>過去所属部署_CW</label>
    <type>TextArea</type>
</CustomField>