force-app/main/default/objects/Contact/fields/CW_PositionRole__c.field-meta.xml
<CustomField>
    <fullName>CW_PositionRole__c</fullName>
    <label>役職・役割</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>営業</fullName>
            </value>
            <value>
                <fullName>現場担当</fullName>
            </value>
            <value>
                <fullName>発注権限者</fullName>
            </value>
            <value>
                <fullName>設計</fullName>
            </value>
            <value>
                <fullName>デザイナー</fullName>
            </value>
            <value>
                <fullName>安全担当</fullName>
            </value>
            <value>
                <fullName>購買</fullName>
            </value>
            <value>
                <fullName>積算</fullName>
            </value>
            <value>
                <fullName>経理</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>選択リスト値待ち</fullName>
                <isActive>false</isActive>
                <label>選択リスト値待ち</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>