force-app/main/default/objects/Contact/fields/CW_ProductCategory2__c.field-meta.xml
<CustomField>
    <fullName>CW_ProductCategory2__c</fullName>
    <label>商品カテゴリ2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductCategory</valueSetName>
    </valueSet>
</CustomField>