force-app/main/default/objects/Contact/fields/cw_project_kaishibi__c.field-meta.xml
<CustomField>
    <fullName>cw_project_kaishibi__c</fullName>
    <label>プロジェクト開始予定日</label>
    <type>Date</type>
</CustomField>