force-app/main/default/objects/Contact/fields/cw_projectmei__c.field-meta.xml
<CustomField>
    <fullName>cw_projectmei__c</fullName>
    <label>プロジェクト名</label>
    <length>200</length>
    <type>Text</type>
</CustomField>