force-app/main/default/objects/Contact/fields/CW_Reaction2__c.field-meta.xml
<CustomField>
    <fullName>CW_Reaction2__c</fullName>
    <label>反応2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reaction</valueSetName>
    </valueSet>
</CustomField>