force-app/main/default/objects/Contact/fields/CW_Reaction3__c.field-meta.xml
<CustomField>
    <fullName>CW_Reaction3__c</fullName>
    <label>反応3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reaction</valueSetName>
    </valueSet>
</CustomField>