force-app/main/default/objects/Contact/fields/CW_RelationshipDegree__c.field-meta.xml
<CustomField>
    <fullName>CW_RelationshipDegree__c</fullName>
    <label>関係構築度_CW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lv1</fullName>
                <default>true</default>
                <label>Lv1</label>
            </value>
            <value>
                <fullName>Lv2</fullName>
            </value>
            <value>
                <fullName>Lv3</fullName>
            </value>
            <value>
                <fullName>Lv4</fullName>
            </value>
            <value>
                <fullName>Lv5</fullName>
            </value>
            <value>
                <fullName>Lv6</fullName>
            </value>
            <value>
                <fullName>Lv7</fullName>
            </value>
            <value>
                <fullName>Lv8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>