force-app/main/default/objects/Contact/fields/CW_RelationshipDegree_BK__c.field-meta.xml
<CustomField>
    <fullName>CW_RelationshipDegree_BK__c</fullName>
    <label>（仮）関係構築度_CW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>