force-app/main/default/objects/Contact/fields/cw_sinkiapproch__c.field-meta.xml
<CustomField>
    <fullName>cw_sinkiapproch__c</fullName>
    <label>新規アプローチ日</label>
    <type>Date</type>
</CustomField>