force-app/main/default/objects/Contact/fields/cw_syokaihoumonyoteibi__c.field-meta.xml
<CustomField>
    <fullName>cw_syokaihoumonyoteibi__c</fullName>
    <label>初回訪問予定日</label>
    <type>Date</type>
</CustomField>