force-app/main/default/objects/Contact/fields/CW_TargetClear__c.field-meta.xml
<CustomField>
    <fullName>CW_TargetClear__c</fullName>
    <description>関係構築度がLv4以上の場合チェックされる</description>
    <formula>IF(OR(TEXT( CW_RelationshipDegree__c )= &quot;Lv4&quot;,TEXT( CW_RelationshipDegree__c )= &quot;Lv5&quot;,TEXT( CW_RelationshipDegree__c )= &quot;Lv6&quot;,TEXT( CW_RelationshipDegree__c )= &quot;Lv7&quot;,TEXT( CW_RelationshipDegree__c )= &quot;Lv8&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*攻略クリア</label>
    <type>Checkbox</type>
</CustomField>