force-app/main/default/objects/Contact/fields/cw_teitainibi__c.field-meta.xml
<CustomField>
    <fullName>cw_teitainibi__c</fullName>
    <formula>today()- CW_LastVisitDay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>停滞日数CS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>