force-app/main/default/objects/Contact/fields/cw_tokuisakitantousya_kouji__c.field-meta.xml
<CustomField>
    <fullName>cw_tokuisakitantousya_kouji__c</fullName>
    <label>工事</label>
    <length>200</length>
    <type>Text</type>
</CustomField>