force-app/main/default/objects/Contact/fields/cw_tokuisakitantousya_syoudansyubetsu__c.field-meta.xml
<CustomField>
    <fullName>cw_tokuisakitantousya_syoudansyubetsu__c</fullName>
    <label>商談種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>材料</fullName>
            </value>
            <value>
                <fullName>工事</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>