force-app/main/default/objects/Contact/fields/cw_tokuisakitantousya_zairyou__c.field-meta.xml
<CustomField>
    <fullName>cw_tokuisakitantousya_zairyou__c</fullName>
    <label>材料</label>
    <length>200</length>
    <type>Text</type>
</CustomField>