force-app/main/default/objects/Contact/fields/CWKeyPersonNmOLD__c.field-meta.xml
<CustomField>
    <fullName>CWKeyPersonNmOLD__c</fullName>
    <label>CW関係構築度（元数値）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>