force-app/main/default/objects/Contact/fields/DepartmentFLG__c.field-meta.xml
<CustomField>
    <fullName>DepartmentFLG__c</fullName>
    <label>部署FLG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>