force-app/main/default/objects/Contact/fields/DonotEmailReason__c.field-meta.xml
<CustomField>
    <fullName>DonotEmailReason__c</fullName>
    <label>メール送信除外理由</label>
    <length>255</length>
    <type>Text</type>
</CustomField>